2006-12-09  Patrick van Staveren  <trick@vanstaveren.us>

	First update in quite some time...

	* src/Banshee.Dap/Mtp/GPhotoDevice.cs:
	* src/Banshee.Dap/Mtp/GPhotoDeviceFile.cs: lots of syntax cleanups
	Who the heck wrote this to begin with?  Oh...it was me...

	* src/Banshee.Dap/Mtp/MtpDeviceId.cs:
	* src/Banshee.Dap/Mtp/Makefile.am: removed MtpDeviceId in favour of
	detecting libgphoto2 compatible devices from HAL properties.

	* src/Banshee.Dap/Mtp/MtpDap.cs: lots of syntax cleanups, use HAL
	properties to determine if this is a MTP device, lots more debug.
	Handle multiple instance devices without a popup.  Play nicely if 
	there is a libgphoto2 camera plugged in as well.

2006-12-09  Aaron Bockover  <abock@gnome.org>

	Banshee 0.11.3 Released!

	* NEWS: Fixed small bug

	* README:
	* AUTHORS: Updated

	* MAINTAINERS: Removed, not sure why we had both	

2006-12-09  Aaron Bockover  <abock@gnome.org>

	* src/Main.cs: setup the GNOME Program outside the Interface initialization
	handler, it needs to be done before startup of any components

2006-12-09  Aaron Bockover  <abock@gnome.org>

	* NEWS: Updated with release notes

	* data/contributors.xml: Updated

	* src/PlayerInterface.cs: Get rid of the old source view loading pane

	* src/Banshee.Base/ActionManager.cs:
	* src/Banshee.Base/Globals.cs:
	* src/Main.cs: Load the interface itself as a startup component; this
	allows the splash screen to stay up the entire startup time, showing
	progress of the interface load

	* src/Banshee.Base/Plugins/PluginCore.cs: Added support for disabling
	plugins altogether by setting BANSHEE_PLUGINS_DISABLE

	* src/Banshee.Base/Banshee.SmartPlaylist/Editor.cs: Focus the playlist
	name entry on UI load

2006-12-08  Aaron Bockover  <abock@gnome.org>

	* build/icon-theme-installer: New script that meant to be used from
	within make/automake to install icons into the theme in an easy and
	proper way. It also updates the icon cache
